# ReDoodle

./: .gitignore  README.md
app/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.css  App.tsx  constants.ts  index.css  main.tsx
app/src/components/: Footer.tsx  GameImages.tsx  GameOverDialogue.tsx  GuessImages.tsx  Header.tsx
app/src/logic/: service.tsx  types.tsx
server/: main.py  pyproject.toml
server/ComfyUI/: .gitignore
server/data/comfyui_workflows/: sd3.5_imagegen.json  sd3.5_img2img.json
server/data/puzzle_images/: prompts.txt
server/redoodle_server/: constants.py  data_model.py  database.py  image_ai.py  images.py  schema.sql
server/scripts/: add_puzzles.py
